Fix toolbar hiding Blockly scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,6 @@ h1, h2, footer, .hero .hint {
     animation-timing-function: ease;
 }
 
-.bounce:visited {
-    animation: none !important;
-}
-
 h1, h2, footer, a, .task, .spoiler .spoiler--title {
     font-family: 'DotGothic16', monospace;
     color: mediumaquamarine;
@@ -126,6 +122,7 @@ img, video {
 }
 
 .floating-toolbar {
+    width: fit-content;
     display: flex;
     position: relative;
     z-index: 70; /* Blockly toolbox seems to have z-index 69 */
